--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "torch>=2.9.0",
     "torchtyping>=0.1.5",
     "torchvision>=0.24.0",
+    "torchvista>=0.2.6",
     "torchviz>=0.0.3",
 ]
 
